--- a/entrance.css
+++ b/entrance.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
  
 body {
-  background-image: url("../assets/rm218batch6-mynt-26.jpg");
+  background-image: url("assets/rm218batch6-mynt-26.jpg");
   background-repeat: no-repeat;
   font-family: "Poppins";
   color: whitesmoke;
