--- a/entrance.css
+++ b/entrance.css
@@ -5,6 +5,7 @@ body {
   background-repeat: no-repeat;
   font-family: "Poppins";
   color: whitesmoke;
+  text-shadow: 0.1em 0.1em 0.1em rgb(141, 49, 145);
 }
  /* Add a black background color to the top navigation */
  .topnav {
