--- a/entrance.css
+++ b/entrance.css
@@ -1,18 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
  
 body {
-  background-image: url("rm218batch6-mynt-26.jpg");
+  background-image: url("background.jpg");
   background-repeat: no-repeat;
   font-family: "Poppins";
   color: #953ca7;
+  margin: 0px;
 }
- /* Add a black background color to the top navigation */
+
  .topnav {
   background-color: rgb(184, 127, 181);
   overflow: hidden;
 }
 
-/* Style the links inside the navigation bar */
 .topnav a {
   float: left;
   display: block;
@@ -23,33 +23,18 @@ body {
   font-size: 17px;
 }
 
-/* Change the color of links on hover */
 .topnav a:hover {
   background-color: #ddd;
   color: rgb(190, 28, 169);
 }
 
-/* Add an active class to highlight the current page */
 .topnav a.active {
   background-color: #953ca7;
   color: white;
 }
 
-/* Hide the link that should open and close the topnav on small screens */
-.topnav .icon {
-  display: none;
-}
- /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
- @media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
 
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
   .topnav.responsive {position: relative;}
   .topnav.responsive a.icon {
     position: absolute;
@@ -63,21 +48,19 @@ body {
   }
 }
 
-/* Style the input container */
 .topnav .login-container {
   float: right;
 }
 
-/* Style the input field inside the navbar */
 .topnav input[type=text] {
   padding: 6px;
   margin-top: 8px;
   font-size: 17px;
   border: none;
-  width: 150px; /* adjust as needed (as long as it doesn't break the topnav) */
+  width: 150px; 
 }
 
-/* Style the button inside the input container */
+
 .topnav .login-container button {
   float: right;
   padding: 6px;
@@ -94,7 +77,7 @@ body {
   background: #ccc;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
   .topnav .login-container {
     float: none;
   }
@@ -113,7 +96,6 @@ body {
 
   .title1 {
     text-align: center;
-    text-shadow: black;
   }
 
 
@@ -122,25 +104,29 @@ body {
     font-weight: 400;
     text-align: center;
   }
-
-  .card .h3{
-    position: absolute;
-    text-align: center
+  @media screen and (max-width: 768px) {
+    .card {
+      width: 100;
+      height: 200;
+      display: block;
+    }
   }
-
+  .card .h3{
+    text-align: center;
+  }
   .card{
-    width: 800px;
-    height: 350px;
+    width: 80%;
+    height: auto;
     box-shadow: 0 10px 20px 0 rgba(0,0,0,0.2);
     border-radius: 10px;
     margin-top: 100px;
-    margin: 100px calc(50% - 400px) !important;
+    margin: 10%;
+    padding-bottom: 10px;
   }
 
   .card:hover {
     box-shadow: 0 8px 10px 0 rgba(0,0,0,0.2);
   }
-
   .card h3{
     padding-left: 10px;
   }
@@ -169,9 +155,9 @@ body {
     padding-top: 10px;
     border-radius: 10px;
     padding-left: 10px;
+    margin-left: 10px;
   }
-
-  .section{
+  section{
     height: auto;
     width: auto;
     display: flex;
@@ -181,7 +167,7 @@ body {
       box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
       transition: 0.3s;
       border-radius: 5px;
-      width: 300px;
+      width: 400px;
       margin: 10px;
       margin-bottom: 30px;
       min-height: 150px !important;
@@ -189,20 +175,32 @@ body {
       position: relative;
       background-color: #e9c0d5;
     }
-
     .smallerCard .description-container {
       overflow-x: hidden;
       overflow-y: hidden;
-      scrollbar-width: thin;          /* "auto" or "thin" */
+      scrollbar-width: thin;
       scrollbar-color: transparent;
       max-height: 150px;
       -webkit-line-clamp: 2;
       text-overflow: ellipsis;
     }
+    .smallerCard .description-container img {
+      display: block;
+      width: 30px;
+      height: 30px;
+      margin: auto;
+      padding-top: 5px;
+      border-radius: 5px;
+    }
      .smallerCard .description {
         word-break: break-all;
         padding-bottom: 50px;
         text-overflow: ellipsis;
+        display: none;
+      }
+
+      .smallerCard details {
+        display: none;
       }
     
     .smallerCard:hover {
@@ -232,9 +230,6 @@ body {
   button:hover, a:hover {
     opacity: 0.7;
   }
-  img {
-    border-radius: 5px 5px 0 0;
-  }
 
   .footer {
     left: 0;
@@ -242,10 +237,9 @@ body {
     width: 100%;
     background-color: rgb(167, 90, 160);
     color: white;
-    text-align: center
+    text-align: center;
   }
 
-   /* Style all font awesome icons */
   .footer .fa {
     padding: 20px;
     font-size: 30px;
@@ -254,14 +248,10 @@ body {
     text-decoration: none;
   }
 
-  /* Add a hover effect if you want */
   .footer .fa:hover {
     opacity: 0.7;
   }
 
-  /* Set a specific color for each brand */
-
-  /* Facebook */
   .fa-facebook {
     background: transparent;
     color: white;
@@ -273,7 +263,6 @@ body {
     border-radius: 50%;
   }
 
-  /* Twitter */
   .fa-twitter {
     background: transparent;
     color: white;
