--- a/entrance.css
+++ b/entrance.css
@@ -1,13 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
- 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&family=Roboto+Mono&display=swap');
 body {
   background-image: url("background.jpg");
   background-repeat: no-repeat;
-  font-family: "Poppins";
+  font-family: "Roboto Mono";
   color: #953ca7;
   margin: 0px;
 }
 
+p {
+  color: rgb(190, 28, 169);
+}
  .topnav {
   background-color: rgb(184, 127, 181);
   overflow: hidden;
@@ -96,6 +98,7 @@ body {
 
   .title1 {
     text-align: center;
+    font-weight: 1000;
   }
 
 
@@ -166,7 +169,6 @@ body {
     .smallerCard {
       box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
       transition: 0.3s;
-      border-radius: 5px;
       width: 400px;
       margin: 10px;
       margin-bottom: 30px;
@@ -183,10 +185,12 @@ body {
       max-height: 150px;
       -webkit-line-clamp: 2;
       text-overflow: ellipsis;
+      text-align: center;
     }
     .smallerCard .description-container img {
       display: block;
       width: 30px;
+      object-fit: cover;
       height: 30px;
       margin: auto;
       padding-top: 5px;
