--- a/list.css
+++ b/list.css
@@ -1,5 +1,4 @@
-
-  section{
+section{
     height: auto;
     width: auto;
     display: flex;
@@ -8,7 +7,6 @@
     .smallerCard {
       box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
       transition: 0.3s;
-      border-radius: 5px;
       width: 800px;
       margin: 10px;
       margin-bottom: 30px;
@@ -24,6 +22,7 @@
       overflow-y: hidden;
       scrollbar-width: thin;
       scrollbar-color: transparent;
+      text-align: center;
       max-height: 500px;
       -webkit-line-clamp: 2;
       text-overflow: ellipsis;
@@ -34,6 +33,7 @@
       display: block;
       width: 100px;
       height: 100px;
+      object-fit: cover;
       text-align: center;
       margin: auto;
       padding-top: 10px;
@@ -68,6 +68,10 @@
     position: absolute;
     bottom: 0px;
     left: 0px;
+  }
+  
+  button:hover, a:hover {
+    opacity: 0.7;
   }
   
   button:hover, a:hover {
