--- a/global.css
+++ b/global.css
@@ -1,14 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&family=Roboto+Mono&display=swap');
  
 body {
   background-image: url("background.jpg");
   background-repeat: no-repeat;
-  font-family: "Poppins";
+  font-family: "Roboto Mono";
   color: #953ca7;
   margin: 0px;
 }
 h2{
   padding-left: 10px;
+}
+p {
+  color: rgb(190, 28, 169);
 }
 
  .topnav {
